added country-code and party management; store country and party per object; invulnerability flag for each object (only for editor/debugging); set country codes in description xml files.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1259 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/SConscript
+++ b/dangerdeep/src/SConscript
@@ -11,6 +11,7 @@ dftdsources = Split("""subsim.cpp
 	cfg.cpp
 	coastmap.cpp
 	convoy.cpp
+	countrycodes.cpp
 	date.cpp
 	depth_charge.cpp
 	filehelper.cpp
